// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteModal DOM should render correctly with multiple systems 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-3"
          aria-labelledby="pf-modal-part-2"
          aria-modal="true"
          class="pf-v5-c-modal-box ins-c-inventory__table--remove sentry-mask data-hj-suppress pf-m-sm"
          data-ouia-component-id="inventory-delete-modal"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-1"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="inventory-delete-modal-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-2"
            >
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                Remove from inventory
              </span>
            </h1>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-3"
          >
            <div
              class="pf-v5-l-split pf-m-gutter"
            >
              <div
                class="pf-v5-l-split__item"
              >
                <span
                  class="pf-v5-c-icon pf-m-xl"
                >
                  <span
                    class="pf-v5-c-icon__content pf-m-warning"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 576 512"
                      width="1em"
                    >
                      <path
                        d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                class="pf-v5-l-split__item pf-m-fill"
              >
                <div
                  class="pf-v5-l-stack pf-m-gutter"
                >
                  <div
                    class="pf-v5-l-stack__item"
                  >
                    2 systems
                     will be removed from all 
                    localhost:5000
                     
                    applications and services. You need to re-register the
                     
                    systems
                     to add it back to your inventory.
                  </div>
                  <div
                    class="pf-v5-l-stack__item"
                  >
                    To disable the daily upload for this 
                    systems
                    , use the following command:
                  </div>
                  <div
                    class="pf-v5-l-stack__item"
                  >
                    <div
                      class="pf-v5-c-clipboard-copy"
                      data-ouia-component-type="PF5/ClipboardCopy"
                      data-ouia-safe="true"
                    >
                      <div
                        class="pf-v5-c-clipboard-copy__group"
                      >
                        <span
                          class="pf-v5-c-form-control"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Copyable input"
                            data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                            data-ouia-component-type="PF5/TextInput"
                            data-ouia-safe="true"
                            id="text-input-1"
                            type="text"
                            value="insights-client --unregister"
                          />
                        </span>
                        <button
                          aria-disabled="false"
                          aria-label="Copy to clipboard"
                          aria-labelledby="copy-button-1 text-input-1"
                          class="pf-v5-c-button pf-m-control"
                          data-ouia-component-id="OUIA-Generated-Button-control-2"
                          data-ouia-component-type="PF5/Button"
                          data-ouia-safe="true"
                          id="copy-button-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 448 512"
                            width="1em"
                          >
                            <path
                              d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pf-v5-l-level pf-m-gutter"
            >
              <div>
                <button
                  aria-disabled="false"
                  class="pf-v5-c-button pf-m-danger"
                  data-ouia-component-id="confirm-inventory-delete"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  data-testid="confirm-inventory-delete"
                  type="button"
                >
                  Remove
                </button>
                <button
                  aria-disabled="false"
                  class="pf-v5-c-button pf-m-link"
                  data-ouia-component-id="cancel-inventory-delete"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DeleteModal DOM should render correctly with one system 1`] = `
<body
  class="pf-v5-c-backdrop__open"
>
  <div
    aria-hidden="true"
  />
  <div>
    <div
      class="pf-v5-c-backdrop"
    >
      <div
        class="pf-v5-l-bullseye"
      >
        <div
          aria-describedby="pf-modal-part-2"
          aria-labelledby="pf-modal-part-1"
          aria-modal="true"
          class="pf-v5-c-modal-box ins-c-inventory__table--remove sentry-mask data-hj-suppress pf-m-sm"
          data-ouia-component-id="inventory-delete-modal"
          data-ouia-component-type="PF5/ModalContent"
          data-ouia-safe="true"
          id="pf-modal-part-0"
          role="dialog"
        >
          <div
            class="pf-v5-c-modal-box__close"
          >
            <button
              aria-disabled="false"
              aria-label="Close"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="inventory-delete-modal-ModalBoxCloseButton"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
          <header
            class="pf-v5-c-modal-box__header"
          >
            <h1
              class="pf-v5-c-modal-box__title"
              id="pf-modal-part-1"
            >
              <span
                class="pf-v5-c-modal-box__title-text"
              >
                Remove from inventory
              </span>
            </h1>
          </header>
          <div
            class="pf-v5-c-modal-box__body"
            id="pf-modal-part-2"
          >
            <div
              class="pf-v5-l-split pf-m-gutter"
            >
              <div
                class="pf-v5-l-split__item"
              >
                <span
                  class="pf-v5-c-icon pf-m-xl"
                >
                  <span
                    class="pf-v5-c-icon__content pf-m-warning"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 576 512"
                      width="1em"
                    >
                      <path
                        d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <div
                class="pf-v5-l-split__item pf-m-fill"
              >
                <div
                  class="pf-v5-l-stack pf-m-gutter"
                >
                  <div
                    class="pf-v5-l-stack__item"
                  >
                    something
                     will be removed from all 
                    localhost:5000
                     
                    applications and services. You need to re-register the
                     
                    system
                     to add it back to your inventory.
                  </div>
                  <div
                    class="pf-v5-l-stack__item"
                  >
                    To disable the daily upload for this 
                    system
                    , use the following command:
                  </div>
                  <div
                    class="pf-v5-l-stack__item"
                  >
                    <div
                      class="pf-v5-c-clipboard-copy"
                      data-ouia-component-type="PF5/ClipboardCopy"
                      data-ouia-safe="true"
                    >
                      <div
                        class="pf-v5-c-clipboard-copy__group"
                      >
                        <span
                          class="pf-v5-c-form-control"
                        >
                          <input
                            aria-invalid="false"
                            aria-label="Copyable input"
                            data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                            data-ouia-component-type="PF5/TextInput"
                            data-ouia-safe="true"
                            id="text-input-0"
                            type="text"
                            value="insights-client --unregister"
                          />
                        </span>
                        <button
                          aria-disabled="false"
                          aria-label="Copy to clipboard"
                          aria-labelledby="copy-button-0 text-input-0"
                          class="pf-v5-c-button pf-m-control"
                          data-ouia-component-id="OUIA-Generated-Button-control-1"
                          data-ouia-component-type="PF5/Button"
                          data-ouia-safe="true"
                          id="copy-button-0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="pf-v5-svg"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            viewBox="0 0 448 512"
                            width="1em"
                          >
                            <path
                              d="M320 448v40c0 13.255-10.745 24-24 24H24c-13.255 0-24-10.745-24-24V120c0-13.255 10.745-24 24-24h72v296c0 30.879 25.121 56 56 56h168zm0-344V0H152c-13.255 0-24 10.745-24 24v368c0 13.255 10.745 24 24 24h272c13.255 0 24-10.745 24-24V128H344c-13.2 0-24-10.8-24-24zm120.971-31.029L375.029 7.029A24 24 0 0 0 358.059 0H352v96h96v-6.059a24 24 0 0 0-7.029-16.97z"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pf-v5-l-level pf-m-gutter"
            >
              <div>
                <button
                  aria-disabled="false"
                  class="pf-v5-c-button pf-m-danger"
                  data-ouia-component-id="confirm-inventory-delete"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  data-testid="confirm-inventory-delete"
                  type="button"
                >
                  Remove
                </button>
                <button
                  aria-disabled="false"
                  class="pf-v5-c-button pf-m-link"
                  data-ouia-component-id="cancel-inventory-delete"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
